--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <link rel="stylesheet" href="./fontawesome-free/css/all.min.css" />
    
-    <title>Aexlar</title>
+    <title>Axelar</title>
   
 
   </head>
